Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8826

recovery hard time should not be shrunk for IR

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      Otherwise, soft limit will be very close to hard limit, and on sluggish network, extended soft limit can reach hard limit easily, and the whole recovery will be aborted easier. Actually, IR is used to shorten the client reconnect time during recovery, so shrink soft limit is good enough. It doesn't make sense to shrink the hard limit.

            niu Niu Yawei (Inactive)
            niu Niu Yawei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: