lustre/include/lustre_lib.h
@@ -65,8 +65,6 @@ struct l_wait_info;
 #define LP_POISON ((void *)LL_POISON)
 
 #ifdef HAVE_SERVER_SUPPORT
-void target_client_add_cb(struct obd_device *obd, __u64 transno, void *cb_data,
-			  int error);
 int rev_import_init(struct obd_export *exp);
 int target_handle_connect(struct ptlrpc_request *req);
 int target_handle_disconnect(struct ptlrpc_request *req);
